# aplvis

./: Makefile.am  Makefile.in  README.md  config.h  config.status  configure.ac
src/: Makefile.am  Makefile.in  aplvis.c  aplvis.h  curves.c  curves.h
