AC_INIT([aplvis], [1.0], [moller@mollerware.com])
AM_INIT_AUTOMAKE([foreign])
#AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AM_PROG_CC_C_O
AC_CONFIG_HEADERS([config.h])

AM_MAINTAINER_MODE([enable])

#AM_PROG_LEX
#AC_PROG_YACC

GETTEXT_PACKAGE=gtk30
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
                   [The prefix for our gettext translation domains.])

PKG_CHECK_MODULES([GTK],   [gtk+-3.0 >= 3.24.21])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES([PLPLOT],   [plplot >= 5.15.0])
AC_SUBST(PLPLOT_CFLAGS)
AC_SUBST(PLPLOT_LIBS)

PKG_CHECK_MODULES([CAIRO], [cairo >= 1.16])
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)


PKG_CHECK_MODULES([FONTCONFIG],   [fontconfig >= 2.13.92])
AC_SUBST(FONTCONFIG_CFLAGS)
AC_SUBST(FONTCONFIG_LIBS)

#PKG_CHECK_MODULES([MAGICKWAND],   [MagickWand >= 6.8.6])
#AC_SUBST(MAGICKWAND_CFLAGS)
#AC_SUBST(MAGICKWAND_LIBS)


AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
